--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
     <title>Bate-Papo UOL</title>
 </head>
 <body>
-    
+    <div class="topo">
+        <img src="logo 1.png">
+        <div class="people">
+            <ion-icon name="people"></ion-icon>
+        </div>
+    </div>
+    <div class="mensagens">
+        lol
+    </div>
+    <div class="bottom">
+        <input type="text" class="escrita" placeholder="Escreva aqui...">
+        <div class="enter">
+            <ion-icon name="paper-plane-outline"></ion-icon>
+        </div>
+    </div>
+    <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
