--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
             <ion-icon name="people"></ion-icon>
         </div>
     </div>
-    <div class="mensagens">
-        lol
-    </div>
+    <ul class="chat">
+    </ul>
     <div class="bottom">
         <input type="text" class="escrita" placeholder="Escreva aqui...">
-        <div class="enter">
-            <ion-icon name="paper-plane-outline"></ion-icon>
-        </div>
+            <ion-icon name="paper-plane-outline" onclick="mensagemEnviada()"></ion-icon>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="javascript.js"></script>
 </body>
 </html>
