Versão com data-test (falta msg reservada)

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <ul class="chat">
     </ul>
     <div class="bottom">
-        <input type="text" class="escrita" placeholder="Escreva aqui...">
-            <ion-icon name="paper-plane-outline" onclick="mensagemEnviada()"></ion-icon>
+        <input type="text" class="escrita" data-test="input-message" placeholder="Escreva aqui...">
+            <ion-icon name="paper-plane-outline" data-test="send-message" onclick="mensagemEnviada()"></ion-icon>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
